# ComfyUI-Turtle_Graphics_Demo

./: README.md  __init__.py  pyproject.toml  requirements.txt
images/: README.md
nodes/: color_test.py  epitrochoid.py  epitrochoid_old.py  hypotrochoid.py  nodes.py  pentagon.eps  rotated_ellipse.py  rotated_nstar.py  rotated_pentagram.py  sierpinski_curve.py  spiral.py  spirograph.py  spirograph_old.py  test.py
support/: color_names.txt
